--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="search_empty_message">Searched username cannot be empty</string>
     <string name="search_no_user_found_message">No user with this Username</string>
     <string name="search_no_repository_found_message">No repository found for this Username</string>
+    <string name="enter_a_github_user_id">Enter a github user id</string>
+    <string name="no_user_found_error">No user found for Username</string>
 </resources>
